# laceanatomy

./: .gitignore  Dockerfile  README.md  package.json
.github/: Dockerfile
.github/workflows/: build.yml
napi-pallas/: Cargo.toml  index.d.ts  index.js  package.json
napi-pallas/npm/darwin-arm64/: README.md  package.json
napi-pallas/npm/darwin-x64/: README.md  package.json
napi-pallas/npm/linux-arm64-gnu/: README.md  package.json
napi-pallas/npm/linux-x64-gnu/: README.md  package.json
napi-pallas/src/: address.rs  block.rs  lib.rs  tx.rs
napi-pallas/src/validations/: alonzo.rs  babbage.rs  byron.rs  conway.rs  mod.rs  shelley_ma.rs  validate.rs
web/: package.json
web/app/: components.tsx  interfaces.ts  root.tsx  tailwind.css  utils.ts
web/app/components/: Button.tsx  DataSection.tsx  Input.tsx  RootSection.tsx  constructors.tsx  index.tsx
web/app/components/Validations/: Information.tsx
web/app/components/Validations/Configurations/: Configurations.tsx  ContextTab.tsx  Tabs.tsx  UITab.tsx
web/app/contexts/: validations.context.ts
web/app/routes/: _index.tsx  address.server.ts  address.tsx  block-wip.tsx  block.server.ts  block.topics.tsx  block.tsx  datum.tsx  tx.server.ts  tx.topics.tsx  tx.tsx
