[package]
edition = "2021"
name = "napi-pallas"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
pallas = "0.21.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
