[package]
edition = "2021"
name = "napi-pallas"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.79"
hex = "0.4.3"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
pallas = { git = "https://github.com/txpipe/pallas.git", rev = "9f5713c" , features = ["unstable"]}
tokio = { version = "1", features = ["full"] }
blockfrost = "1.0.1"
blockfrost-openapi = "0.0.3"
num-rational = "0.4.0"
num-traits = "0.2.14"
dotenv = "0.15.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
